fix responseive collapse

--- a/html/app/styles/compass_twitter_bootstrap/_mystyle.scss
+++ b/html/app/styles/compass_twitter_bootstrap/_mystyle.scss
@@ -77,4 +77,3 @@ line-height: 40px;
 .main_title{font-family:$webFontsElegant,$monoFontFamily;}
 .meta{font-family:$serifFontFamily;color:$grayLight}
 .meta a{color:$grayLight;text-decoration:underline}
-.sidebar{padding: 0 20 20px 0}
